--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-.App {
-  text-align: center;
-}
-
 body {
   min-height: 100vh;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -25,16 +21,11 @@ nav {
   list-style: none;
 }
 
-a {
-  font-size: 1.2rem;
-  color: white;
-}
-
 .card-box {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
-  padding-top: 1rem;
+  gap: 0.5rem;
+  padding: 2rem;
 }
 
 .card {
@@ -42,23 +33,30 @@ a {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .candySvg {
-  height: 40vmin;
-  width: 250px;
-  pointer-events: none;
-}
-
-.cart-button {
-  font-size: 1rem;
-  margin: 1rem;
-  width: 100px;
+  max-width: 250px;
 }
 
 .cart {
   font-weight: bold;
   font-size: 1.2rem;
-  margin-left: -5rem;
+  margin-left: -5.5rem;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+  font-size: 1.2rem;
+  border: none;
 }
